2010-01-08  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: added missing property.

2010-01-08  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: ruler divider line is now
	  drawn in background.

2010-01-07  Michael Hutchinson  <mhutchinson@novell.com>

	* SyntaxModes/CSyntaxMode.xml:
	* SyntaxModes/CPPSyntaxMode.xml: Use the C++ syntax mode for
	  highlighting .h files, since they're often C++. Fixes "Bug
	  468416 - *.h aren't colorized as c++ headers".

2010-01-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fix some GTK 2.12 FIXMEs.

2010-01-07  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: VRuler now draws
	  correctly with multiple line text markers.

2010-01-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed hruler drawing bug.

2010-01-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting.Regex/Regex.cs: fixed 'Bug
	  568483 - IndexOutOfRangeException in CSharpSyntaxMode'.

2010-01-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting.Regex/Regex.cs: fixed 'Bug
	  568483 - IndexOutOfRangeException in CSharpSyntaxMode'.

2010-01-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/LineSplitter.cs: Remove lines with extending
	  markers, when the line is removed.

2010-01-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 567317 -
	  Underscores not always visible in text editor when usign
	  specific fonts, like Courier New'.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSyntaxMode.xml:
	* SyntaxModes/CPPSyntaxMode.xml: Fixed 'Bug 564387 - #if 0
	  grayed out until #endif'.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSharpSyntaxMode.xml: fixed 'Bug 564378 - Inline
	  comments in c# with ///< screw up code coloring'.

2010-01-04  Mike Krüger  <mkrueger@novell.com>