@@ -34,6 +34,19 @@ namespace Mono.TextEditor
 		int GetLineHeight (TextEditor editor);
 	}
 	
+	public interface IActionTextMarker
+	{
+		/// <returns>
+		/// true, if the mouse press was handled - false otherwise.
+		/// </returns>
+		bool MousePressed (TextEditor editor, MarginMouseEventArgs args);
+		
+		/// <returns>
+		/// true, if the mouse hover was handled - false otherwise.
+		/// </returns>
+		bool MouseHover (TextEditor editor, MarginMouseEventArgs args, ref Gdk.Cursor cursor);
+	}
+	
 	public class TextMarker
 	{
 		LineSegment lineSegment;
