@@ -1,5 +1,12 @@
 2010-01-08  Mike Krüger  <mkrueger@novell.com>
 
+	* Mono.TextEditor/TextEditor.cs:
+	* Mono.TextEditor/TextMarker.cs:
+	* Mono.TextEditor/TextViewMargin.cs: Worked on collapsible
+	  error bubbles.
+
+2010-01-08  Mike Krüger  <mkrueger@novell.com>
+
 	* Mono.TextEditor/TextViewMargin.cs: added missing property.
 
 2010-01-08  Mike Krüger  <mkrueger@novell.com>
